// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`nonNegativeInteger should not accept NaN 1`] = `
[
  {
    "code": "is_nan",
    "path": [],
  },
]
`;

exports[`nonNegativeInteger should not accept negative integers 1`] = `
[
  {
    "code": "too_small",
    "min": 0,
    "path": [],
  },
]
`;

exports[`nonNegativeInteger should not accept negative integers 2`] = `
[
  {
    "code": "too_small",
    "min": 0,
    "path": [],
  },
]
`;

exports[`nonNegativeInteger should not accept negative integers 3`] = `
[
  {
    "code": "too_small",
    "min": 0,
    "path": [],
  },
]
`;

exports[`nonNegativeInteger should not accept non-integers 1`] = `
[
  {
    "code": "invalid_integer",
    "path": [],
  },
]
`;

exports[`nonNegativeInteger should not accept non-integers 2`] = `
[
  {
    "code": "invalid_integer",
    "path": [],
  },
]
`;
